Cannot copy text/click links in read-only events
Subscribing to a read-only calendar and opening events in it, leads in Evolution to “The event cannot be edited, because the calendar is read-only” message.
- In order not to clutter the interface, for read-only events that have no Location, URL, Status, Description, Attachments, Attendees, Reminders or Recurrences, hide the corresponding field and the “All day event” toggle.
While in read-only events the location/summary can be selected/focused and therefore copied, the description cannot be copied. Switching the calendar, without saving anything, marks the calendar as editable, and allows copying the description.
- For read-only events permit copying the description, without requiring equilibristics from the users.
Edited by Milan Crha