I#1171 - Cannot copy text/click links in read-only events

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1171